# cuda-samples-bazel

./: LICENSE  MODULE.bazel  README.md  WORKSPACE
cuda/: BUILD.bazel  extensions.bzl
cuda/private/: cuda_helper.bzl  defs.bzl  repositories.bzl
cuda/private/templates/: BUILD.cudart  BUILD.local_cuda_shared  BUILD.local_toolchain_clang  BUILD.local_toolchain_disabled  BUILD.local_toolchain_nvcc  BUILD.local_toolchain_nvcc_msvc
demos/: .bazelrc  MODULE.bazel  WORKSPACE
demos/0_practice/basic/: BUILD.bazel
demos/0_practice/if_cuda/: BUILD.bazel
demos/0_practice/nccl/: nccl-tests.BUILD  nccl.BUILD  nccl.bzl
demos/0_practice/thrust/: BUILD.bazel
demos/1_introduction/UnifiedMemoryStreams/: UnifiedMemoryStreams.cu  helper_cuda.h
demos/1_introduction/vectorAdd/: BUILD.bazel
demos/2_utilities/deviceQuery/: BUILD.bazel  deviceQuery.cpp
demos/2_utilities/deviceQueryDrv/: BUILD.bazel  deviceQueryDrv.cpp
demos/2_utilities/topologyQuery/: BUILD.bazel  topologyQuery.cu
demos/Common/: BUILD.bazel  helper_cuda_drvapi.h  helper_functions.h  helper_image.h  helper_string.h  helper_timer.h
demos/UnifiedMemoryStreams/: BUILD.bazel  UnifiedMemoryStreams.cu
demos/basic_macros/: BUILD.bazel
demos/nccl/: nccl-tests.BUILD  nccl-tests.bzl  nccl.BUILD
demos/rdc/: BUILD.bazel
