module(
    name = "cuda_samples_bazel",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "platforms", version = "0.0.6")

cuda = use_extension("@cuda_samples_bazel//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")

register_toolchains(
    "@local_cuda//toolchain:nvcc-local-toolchain",
    "@local_cuda//toolchain/clang:clang-local-toolchain",
    "@local_cuda//toolchain/disabled:disabled-local-toolchain",
)

bazel_dep(name = "cuda_demos", dev_dependency = True)
local_path_override(
    module_name = "cuda_demos",
    path = "./demos",
)
