module(
    name = "cuda_demos",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "cuda_samples_bazel", version = "0.2.3")
local_path_override(
    module_name = "cuda_samples_bazel",
    path = "..",
)

cuda = use_extension("@cuda_samples_bazel//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")

#################################
# Dependencies for nccl example #
#################################
# See WORKSPACE.bzlmod for the remaining parts
bazel_dep(name = "bazel_skylib", version = "1.4.2")
