# MIT License

# Copyright (c) 2025 CUI Xin (崔 欣)

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

load("@cuda_samples_bazel//cuda:defs.bzl", "cuda_library", "cuda_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "deviceQuery",
    srcs = ["deviceQuery.cpp"],
    copts = [
        "-I/usr/local/cuda/include",  # Path to cuda_runtime.h
        "--cuda-gpu-arch=sm_60",      # GPU architecture
    ],
    linkopts = [
        "-L/usr/local/cuda/lib64",
        "-lcudart",  # Link CUDA runtime
    ],
    deps = [
        "@local_cuda//:cublas",
        "@cuda_demos//Common:helper_cuda",
    ],
)
